# bookly

./: .gitignore  main.py  pyproject.toml
src/: __init__.py  config.py  errors.py  mail.py  middleware.py
src/auth/: dependencies.py  models.py  routes.py  schemas.py  service.py  utils.py
src/books/: book_data.py  models.py  routes.py  schemas.py  service.py
src/db/: main.py  models.py
src/reviews/: routes.py  schemas.py  service.py
src/tags/: routes.py  service.py
src/tests/: conftest.py  test_auth.py
